# sawyer_i2rl_project_workspace

./: .gitignore  README.md  callruniteratively_varyObvty_LBAILEAnalysis.sh  intera.sh  send_notification.py  testWNotification_multitask_IRL_sortingMDP.sh  testWNotification_noisyObsSampling_MEIRL_sortingMDP.sh  testWNotification_singletask_IRL.sh  testWNotification_singletask_IRL_sortingMDP.sh  workspace_specific_git_commands.txt
src/: Sawyer Hardware - Intera.html
src/Sawyer Hardware - Intera_files/: css.css  load.php  load_002.css
src/change_objectcolor/: CMakeLists.txt  package.xml
src/irld/: CMakeLists.txt  runMultiComputeObsModelpatrolToyMDP.sh  runMultiComputeObsModelsortingMdpPnP.sh
src/navigation_irl/: CMakeLists.txt  all_stop.py  analyzeprediction.py  attacker_mdp_test.py  boydjppa.py  componentprobs.py  damage_wheel.py  debugging.py  fixmissingentries.py  generatetrainingdata.py  grid_full.py  grid_main.py  grid_test.py  mainpage.dox  mdpconfig  mdpdbn.py  mdppatrolcontrol.py  nav_irl.py  package.xml  patrol_baye.py  patrol_main.py  patrol_main2.py  patrol_main_prob.py  patrol_main_prob_maxent.py  patrol_main_prob_spec.py  ros_ctrl.py  ros_ctrl.py~  ros_ctrl_i2rl.py  ros_ctrl_irl.py  test.py  test_singletaskIRL.py  test_singletaskIRLNoisyObs_sortingMDP.py  test_singletaskIRL_sortingMDP.py  typing.py  visboyd.sh  visboydright.sh  visualizer.py  visualizercore.py  visualizercore2.py  (+1 more)
src/patroller_ctrl/: CMakeLists.txt  fakesim.py  ground_truth.py  mainpage.dox  manifest.xml  monitor.py  mostlikelyaction  package.xml  patrolcontrol.py  patroller_prox.py
(+42 files in other folders)
